@@ -12,6 +12,9 @@ What's New in Python 2.4.4c1?
 Core and builtins
 -----------------
 
+- Patch #1541585: fix buffer overrun when performing repr() on
+  a unicode string in a build with wide unicode (UCS-4) support.
+
 - Bug #1536786: buffer comparison could emit a RuntimeWarning.
 
 - Bug #1535165: fixed a segfault in input() and raw_input() when
@@ -32,6 +35,7 @@ Core and builtins
 - Bug #1454485: Don't crash on Unicode characters <0.
 
 - Patch #1488312, Fix memory alignment problem on SPARC in unicode
+
 
 Extension Modules
 -----------------
@@ -71,6 +75,7 @@ Extension Modules
 - pybsddb Bug #1527939: bsddb module DBEnv dbremove and dbrename
   methods now allow their database parameter to be None as the
   sleepycat API allows.
+
 
 Library
 -------
